# auv_pathplanning

./: CMakeLists.txt  README.md  package.xml
include/auv_pathPlanning/: pose_node.hpp
src/: navigator.cpp  path_planning.cpp
